Виправля помилку фокусу

--- a/sass/components/_gallery-portfolio.scss
+++ b/sass/components/_gallery-portfolio.scss
@@ -13,26 +13,17 @@
 
 
 
-.gallery__linc {
+.gallery__link {
     display: block;
     transition: box-shadow $transition;
 
-    // &:focus,
-    // &:hover {
-    //     box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-    //     0px 4px 4px rgba(0, 0, 0, 0.06),
-    //     1px 4px 6px rgba(0, 0, 0, 0.16);
-    
-    // }
+    &:focus,
+    &:hover {
+        box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+        0px 4px 4px rgba(0, 0, 0, 0.06),
+        1px 4px 6px rgba(0, 0, 0, 0.16);
+    }
 }
-
-.gallery__linc:focus,
-.gallery__linc:hover {
-    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
-    0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-
 
 
 .gallery__card:nth-child(3n) {
