--- a/sass/components/_container.scss
+++ b/sass/components/_container.scss
@@ -7,6 +7,11 @@
     
 }
 
+.container--header {
+    @include centeredFlex(flex);
+
+}
+
 .container--slogan {
     display: flex;
     flex-wrap: wrap;
