--- a/sass/components/_form_email.scss
+++ b/sass/components/_form_email.scss
@@ -6,7 +6,7 @@
     padding-left: 16px;
     margin-right: 12px;
 
-    color: $bg-footer;
+    color: $color-FFFFFF;
     border: 1px solid rgba(255, 255, 255, 0.3);
     border-radius: 4px;
     background-color: inherit;
