--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -32,5 +32,13 @@
     line-height: calc(30 / 16);
     letter-spacing: 0.06em;
     cursor: pointer;
+}
 
+
+%logo {
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    font-size: 26px;
+    line-height: calc(31 / 26);
+    color: #000000;
 }
