--- a/css/main.css
+++ b/css/main.css
@@ -301,6 +301,8 @@ img {
 }
 
 .button {
+  padding: 0;
+  border: 0;
   border-color: transparent;
   cursor: pointer;
 }
@@ -328,20 +330,22 @@ img {
   color: #212121;
 }
 
-.button--hero,
-.button-form,
-.form__button {
-  padding: 0;
+.button--modal, .button--form, .button--hero {
+  width: 200px;
+  height: 50px;
   background-color: #2196F3;
   color: #FFFFFF;
-  border-color: transparent;
+  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   border-radius: 4px;
   font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.875;
   letter-spacing: 0.06em;
-  cursor: pointer;
+}
+.button--modal:hover, .button--form:hover, .button--hero:hover, .button--modal:focus, .button--form:focus, .button--hero:focus {
+  background-color: #188CE8;
 }
 
 .logo-link,
@@ -482,12 +486,11 @@ img {
   color: #188CE8;
 }
 
-.navigation__link.current {
+.navigation__link--current {
   position: relative;
   color: #2196F3;
 }
-
-.navigation__link.current::after {
+.navigation__link--current::after {
   content: "";
   position: absolute;
   height: 4px;
@@ -496,12 +499,6 @@ img {
   border-radius: 4px;
   display: block;
   background-color: #2196F3;
-}
-
-.navigation.current:hover:after {
-  opacity: 1;
-  -webkit-transform: scaleX(1);
-          transform: scaleX(1);
 }
 
 .navigation__list {
@@ -612,26 +609,11 @@ img {
   letter-spacing: 0.06em;
 }
 
-.button--hero,
-.button-form,
-.form__button {
-  padding: 10px 32px;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-}
-.button--hero:hover, .button--hero:focus,
-.button-form:hover,
-.button-form:focus,
-.form__button:hover,
-.form__button:focus {
-  background-color: #188CE8;
+.button--hero {
+  width: 216px;
 }
 
-.button-form {
-  width: 200px;
-  height: 50px;
+.button--form {
   display: -webkit-inline-box;
   display: -ms-inline-flexbox;
   display: inline-flex;
@@ -641,15 +623,23 @@ img {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  width: 200px;
-  height: 50px;
   -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
           box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.button-form:hover {
-  background-color: #188CE8;
+
+.button--modal {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  margin: auto;
+  -webkit-box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+          box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
 }
 
 /* =================  PORTFOLIO  ==================== */
@@ -678,7 +668,7 @@ img {
           box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
-.nav__butten--all {
+.nav__butten--first {
   padding-left: 25px;
   padding-right: 25px;
 }
@@ -712,7 +702,7 @@ img {
 }
 
 /* =================  PORTFOLIO  ==================== */
-.title-card {
+.text__card {
   margin-bottom: 4px;
   color: #212121;
   font-weight: 700;
@@ -721,7 +711,7 @@ img {
   letter-spacing: 0.06em;
 }
 
-.title-card__text {
+.text__card--link {
   color: #757575;
   font-size: 16px;
   line-height: 1.875;
@@ -747,7 +737,7 @@ img {
   margin-bottom: 30px;
   width: 270px;
   height: 120px;
-  background: rgb(245, 244, 250);
+  background: #F5F4FA;
   padding: 25px 100px;
   border-radius: 4px;
 }
@@ -1040,7 +1030,7 @@ img {
 .form__field:focus, .form__field:hover {
   border: 1px solid #2196F3;
 }
-.form__field:focus ~ .form__icon {
+.form__field:focus ~ .form__icon, .form__field:hover ~ .form__icon {
   color: #2196F3;
 }
 
@@ -1144,27 +1134,6 @@ img {
   border-radius: 2px;
 }
 
-.form__button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  width: 200px;
-  padding: 10px 52px;
-  margin: auto;
-  cursor: pointer;
-  -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.form__button:focus, .form__button:hover {
-  background-color: #2196F3;
-}
-
 .form__email {
   width: 358px;
   height: 50px;
@@ -1178,7 +1147,7 @@ img {
   background-color: inherit;
 }
 
-.subscribe-icon {
+.button--icon {
   width: 24px;
   height: 24px;
   margin-left: 10px;
@@ -1210,6 +1179,7 @@ img {
 .overlay__text {
   position: absolute;
   display: block;
+  padding: 63px 24px;
   top: 0;
   left: 0;
   width: 100%;
@@ -1221,7 +1191,6 @@ img {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   background: rgba(33, 150, 243, 0.9);
-  padding: 63px 24px;
   font-size: 18px;
   line-height: 1.5555555556;
   color: #FFFFFF;
@@ -1231,7 +1200,7 @@ img {
           transform: translateY(0);
 }
 
-.title {
+.text {
   padding: 20px 24px;
   background: #FFFFFF;
   border-right: 1px solid #EEEEEE;
