--- a/sass/components/_section-about_Us.scss
+++ b/sass/components/_section-about_Us.scss
@@ -10,7 +10,7 @@
     width: 270px;
     height: 120px;
 
-    background: rgba(245, 244, 250, 1);
+    background: $color-F5F4FA;
     padding: 25px 100px;
     border-radius: 4px;
 
