--- a/sass/components/_title.scss
+++ b/sass/components/_title.scss
@@ -48,7 +48,7 @@
     @extend %visually-hidden
 }
 
-.title-card {
+.text__card {
     margin-bottom: 4px;
 
     color: $color-secondary-txt;
@@ -58,7 +58,7 @@
     letter-spacing: 0.06em;
 }
 
-.title-card__text {
+.text__card--link {
 
     color: $color-main-txt;
     font-size: 16px;
