--- a/sass/layout/_navigation.scss
+++ b/sass/layout/_navigation.scss
@@ -24,27 +24,23 @@
 }
 
 
-.navigation__link.current {
+.navigation__link--current {
     position: relative;
     color: $color-accent-2196F3;
 
-}
+    &::after {
+        content: "";
+        position: absolute;
+        height: 4px;
+        bottom: -1px;
+        width: 100%;
+        border-radius: 4px;
 
-.navigation__link.current::after {
-    content: "";
-    position: absolute;
-    height: 4px;
-    bottom: -1px;
-    width: 100%;
-    border-radius: 4px;
-
-    display: block;
-    background-color: $color-accent-2196F3;
-}
-
-.navigation.current:hover:after {
-    opacity: 1;
-    transform: scaleX(1);
+        display: block;
+        background-color: $color-accent-2196F3;
+        
+        
+    }
 
 }
 
