--- a/sass/utils/_placeholders.scss
+++ b/sass/utils/_placeholders.scss
@@ -21,17 +21,24 @@
 }
 
 %button {
-    padding: 0;
+    width: 200px;
+    height: 50px;
     background-color: $color-accent-2196F3;
     color: $color-FFFFFF;
-    border-color: transparent;
+    transition: background-color $transition ;
+
     border-radius: 4px;
     font-family: inherit;
     font-weight: 700;
     font-size: 16px;
     line-height: calc(30 / 16);
     letter-spacing: 0.06em;
-    cursor: pointer;
+
+    &:hover,
+    &:focus {
+        background-color: $color-hover-188CE8;
+    
+    }
 }
 
 
