--- a/css/main.css
+++ b/css/main.css
@@ -657,6 +657,7 @@ img {
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
   font-weight: 500;
   font-size: 16px;
   line-height: 1.625;
@@ -746,7 +747,7 @@ img {
   margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
-  line-height: 1.1428571429;
+  line-height: 1.7142857143;
   text-transform: uppercase;
   color: #212121;
 }
@@ -963,8 +964,8 @@ img {
   left: 50%;
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
-  width: 528px;
-  height: 581px;
+  min-width: 528px;
+  min-height: 581px;
   padding: 40px;
   border-radius: 4px;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1019,7 +1020,7 @@ img {
 
 .form__field {
   width: 100%;
-  margin-top: 4px;
+  height: 40px;
   padding: 10px 10px 10px 35px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
@@ -1035,6 +1036,8 @@ img {
 }
 
 .form__label {
+  display: block;
+  margin-bottom: 4px;
   font-size: 12px;
   line-height: 1.1666666667;
   letter-spacing: 0.01em;
@@ -1043,8 +1046,8 @@ img {
 .form__icon {
   position: absolute;
   bottom: 50%;
-  -webkit-transform: translateY(115%);
-          transform: translateY(115%);
+  -webkit-transform: translateY(100%);
+          transform: translateY(100%);
   left: 12px;
   width: 18px;
   height: 18px;
@@ -1054,13 +1057,16 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.form__textarea {
+.form__coment {
   margin-bottom: 20px;
-  display: inline-block;
+}
+
+.form__textarea {
+  margin-top: 4px;
+  display: block;
   width: 448px;
   height: 120px;
   padding: 12px 16px;
-  margin-top: 4px;
   border: 1px solid rgba(33, 33, 33, 0.2);
   border-radius: 4px;
   resize: none;
@@ -1072,8 +1078,9 @@ img {
 }
 
 .form__textarea-label {
+  display: block;
   font-size: 12px;
-  line-height: 1.1666666667;
+  line-height: 1.1716666667;
   letter-spacing: 0.01em;
   color: #757575;
 }
@@ -1220,7 +1227,6 @@ img {
 .gallery__thumb {
   position: relative;
   overflow: hidden;
-  margin-bottom: 20px;
 }
 
 .gallery__link {
