--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -3,8 +3,8 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 528px;
-    height: 581px;
+    min-width: 528px;
+    min-height: 581px;
     padding: 40px;
     border-radius: 4px;
     box-shadow:
@@ -58,7 +58,7 @@
 
 .form__field {
     width: 100%;
-    margin-top: 4px;
+    height: 40px;
     padding: 10px 10px 10px 35px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
@@ -78,6 +78,8 @@
 
 
 .form__label {
+    display: block;
+    margin-bottom: 4px;
     font-size: 12px;
     line-height: calc(14 / 12);
     letter-spacing: 0.01em;
@@ -88,7 +90,7 @@
 .form__icon {
     position: absolute;
     bottom: 50%;
-    transform: translateY(115%);
+    transform: translateY(100%);
     left: 12px;
     width: 18px;
     height: 18px;
@@ -98,17 +100,19 @@
 
 }
 
-
+.form__coment {
+    margin-bottom: 20px;
+}
 
 
 .form__textarea {
-    margin-bottom: 20px;
+    margin-top: 4px;
 
-    display: inline-block;
+    display: block;
     width: 448px;
     height: 120px;
     padding: 12px 16px;
-    margin-top: 4px;
+ 
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     resize: none;
@@ -123,8 +127,9 @@
 
 
 .form__textarea-label {
+    display: block;
     font-size: 12px;
-    line-height: calc(14 / 12);
+    line-height: calc(14.06 / 12);
     letter-spacing: 0.01em;
     color: $color-main-txt;
 }
